fix hide class on mobile

--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -91,8 +91,6 @@
 	margin-left: 28px;
 }
 
-@media (min-width: $breakpoint-lg) {
-	.hide {
-		display: none;
-	}
+.hide {
+	display: none;
 }
